assets/css/style.css
/* General */

body {
    font-family: 'Indie Flower', cursive;
    text-align: center;
    padding: 0;
    margin: 0;
}

.hide {
    display: none;
}

/* Landing Container */

.landingcontainer{
    height: 100vh;
    width: 100vw;
}

/* Nav Bar */

#navcontainer {
    align-content: center;
    width: 100vw;
    position: fixed;
    top:0;
    left:0;
    border-bottom: 1px solid #e6a723;
    z-index: 2;
}

.navbar{
    padding: 0;
    font-weight: 700;
    background-color: #fff;
    
}

.navbar-light .navbar-nav .nav-link{
    color: #000;
    border: 2px solid transparent;
}

.navbar-light .navbar-nav .nav-link:hover{
    color: #000;
    border: 2px solid #e6a723;
    transition: .25s ease-in-out;
}

.logo {
    max-height: 70px ;
    background-size: contain;
}
/* Home */

#landing {
    position: absolute;
    top: 0;
    left: 0;
    margin: 0;
    background: url('../images/manchester_quays.jpg') no-repeat center fixed;
    height: 100vh;
    width: 100vw;
    background-size: cover;
    display: block;
    z-index: 1;
    color: #fff;
}

.opaque-overlay {
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.5);
}

.welcomecontainer {
    margin-top: 20vh;
}

#welcome {
    font-size: 4em;
}

#tagline {
    font-size: 3em;
}

.allfeatures{
    padding-top: 10vh;
    font-size: 2em;
    text-align: center;
    align-items: center;
}

.feature{
    border: 2px solid #e6a723;
    margin: 0.5em 1em 0em 1em;
    justify-content: center;
    align-items: center;
	background-color: rgba(0, 0, 0, 0.6);
    cursor: pointer;
}

.feature:hover{
    background-color: rgba(230, 167, 35, 0.8);
    transition: .25s ease-in-out;
}


#arrow{
    margin-top: 2em;
    height: 25px;
    width: 25px;
    border-style: solid;
    border-color: #e6a723;
    border-width: 0px 4px 4px 0px;
    transform: rotate(45deg);
    transition: border-width 150ms ease-in-out;
    cursor: pointer;
}



/* footer */
#footer {
    position: fixed;
    left: 0;
    right: 0;
    bottom: 0;
    margin: 0 auto;
    padding: 0 auto;
    height: 4em;
    background-color: rgba(230, 167, 35, 0.8);
    z-index: 1;
}

.socialicon {
    font-size: 2.5em;
    margin-left: 25px;
    margin-right: 25px;
    padding-top: 0.25em;
    text-align: center;
}

.socialicon a i {
    color: #fff; 
}

.socialicon a i:hover{
    color:  rgba(0, 0, 0, 0.8);
    transition: .25s ease-in-out;
}

/* Main Map */
 #mainmap {
     padding-top: 5vh;
     padding-left: 0;
     padding-right: 0;
     height: 90vh;
     width: 100vw;
 }
 
 .locationbutton{
	background-color:#e6a723;
    width: 75%;
    min-width: 125px;
    margin: 0.5em;
    display: inline;
    font-size: 1em;
    font-weight: 700;
	cursor:pointer;
	text-decoration:none;
}

#map2 {
    height: 55vh;
    width: 90%;
}

/* Activities, Food & Drink, Accomodation */

.activitiescontainer, .fooddrinkcontainer, .accomodationcontainer {
    padding-bottom: 50px;
}

.featureheading{
    font-size: 3em;
    font-weight: 700;
    padding-top: 100px;
    margin-bottom: 20px;
}

.location {
    display: flex;
    justify-content: center;
    margin: 50px;
    padding: 0;
    cursor: pointer;
}


.locationimage {
    height: 275px;
    width: 300px;
    min-width: 300px;;
    object-fit: cover;
}

.locationname{
    position: absolute;
    top:0;
    color: #fff;
    font-size: 1.25em;
    font-weight: 600;
    width: 300px;
    background-color: rgba(230, 167, 35, 0.8);
}


/* Activities, Food & Drink, Accomodation details */
#locationdetails{
    padding-top: 100px;
    height: 100vh;
    width: 100vw;
}

.details {
    border: 2px solid #e6a723;
    background-color: rgba(0, 0, 0, 0.8);
    color: #fff;
}

.details p i  {
    color:  #e6a723;
}

#locationwebsite {
    color: #fff;
    text-decoration: underline;
    text-decoration-color: #e6a723;
}

#locationwebsite:hover{
    color: #e6a723;
    text-decoration: underline;
    text-decoration-color: #e6a723;
}

#locationvenue {
    font-weight: 600;
}

#locationdetails p{
    font-size: 1.25em;
}

#map {
    height: 75vh;
    width: 65vw;
}

